packages/typ/tests/fixtures/diagnostics/0721_fcm_pack_with_type_mismatch_07.ml.expected
File "0721_fcm_pack_with_type_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0721_fcm_pack_with_type_mismatch_07 is not a valid module name.

File "0721_fcm_pack_with_type_mismatch_07.ml", line 11, characters 16-21:
11 | let _ = (module M_eta : Box_eta with type t = bool)
                     ^^^^^
Error: This expression has type (module Box_eta with type t = bool)
       but an expression was expected of type
         (module Box_eta with type t = M_eta.t)
       Type bool is not compatible with type M_eta.t = int
